Fix outdated browser detection

--- a/src/scss/bundle.scss
+++ b/src/scss/bundle.scss
@@ -45,5 +45,5 @@
 @import 'components/index';
 
 // Riba
-@import '../../node_modules//@ribajs/core/src/index';
-@import '../../node_modules//@ribajs/shopify/src/index';
+@import '../../node_modules/@ribajs/core/src/index';
+@import '../../node_modules/@ribajs/shopify/src/index';
