--- a/theme/sections/instagram-scrollbar.liquid
+++ b/theme/sections/instagram-scrollbar.liquid
@@ -17,17 +17,17 @@
     </div>
   </div>
   <div class="row flex-nowrap scrollbar-invisible scrollbar-x-auto" rv-scrollbar-dragable="" rv-on-scroll="onScroll">
-    <div class="col-7 col-md-5 px-0 content-box ratio-1-1 cursor-pointer" rv-each-image="media.data" rv-add-class="image.media_type" rv-data-url="image.permalink" rv-on-tap="onTap">
+    <div class="col-7 col-md-5 px-0 embed-responsive embed-responsive-1by1 cursor-pointer" rv-each-image="media.data" rv-add-class="image.media_type" rv-data-url="image.permalink" rv-on-tap="onTap">
       
       {% comment %} IMAGE {% endcomment %}
-      <img loading="lazy" class="content lazy" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-alt="image.caption">
+      <img loading="lazy" class="embed-responsive-item lazy" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-alt="image.caption">
 
       {% comment %} CAROUSEL_ALBUM {% endcomment %}
-      <img loading="lazy" class="content lazy" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-alt="image.caption">
+      <img loading="lazy" class="embed-responsive-item lazy" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-alt="image.caption">
       
       {% comment %} VIDEO {% endcomment %}
       <fsbdr-video rv-if="image.media_type | eq 'VIDEO'" rv-mp4-src="image.media_url">
-        <video class="content lazy" autoplay muted loop preload playsinline webkit-playsinline>
+        <video class="embed-responsive-item lazy" autoplay muted loop preload playsinline webkit-playsinline>
           <source rv-src="mp4Src" type="video/mp4">
           Your browser does not support the video tag.
         </video>
