--- a/theme/sections/instagram.liquid
+++ b/theme/sections/instagram.liquid
@@ -4,17 +4,17 @@
   limit="{{section.settings.limit}}"
   >
   <div class="row">
-    <div class="col-12 col-sm-4 px-0 content-box ratio-1-1" rv-each-image="media.data" rv-add-class="image.media_type" rv-data-url="image.permalink" rv-on-doubletap="onTap">
+    <div class="col-12 col-sm-4 px-0 embed-responsive embed-responsive-1by1" rv-each-image="media.data" rv-add-class="image.media_type" rv-data-url="image.permalink" rv-on-doubletap="onTap">
       {% comment %} IMAGE {% endcomment %}
-      <img loading="lazy" class="content lazy" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
+      <img loading="lazy" class="embed-responsive-item lazy" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
 
       {% comment %} CAROUSEL_ALBUM {% endcomment %}
-      <img loading="lazy" class="content lazy" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
+      <img loading="lazy" class="embed-responsive-item lazy" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
       
       {% comment %} VIDEO {% endcomment %}
       <fsbdr-video class="" rv-mp4-src="image.media_url" rv-show="image.media_type | eq 'VIDEO'">
         {% comment %} VIDEO {% endcomment %}
-        <video class="content lazy" autoplay muted loop preload playsinline webkit-playsinline>
+        <video class="embed-responsive-item lazy" autoplay muted loop preload playsinline webkit-playsinline>
           <source rv-src="mp4Src" type="video/mp4">
           Your browser does not support the video tag.
         </video>
