--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -935,3 +935,25 @@ $pre-scrollable-max-height:         340px;
 // Printing
 $print-page-size:                   a3;
 $print-body-min-width:              map-get($grid-breakpoints, "lg");
+
+
+// aspect ratio classes
+$embed-responsive-aspect-ratios: (
+  (1 1),
+  (3 2),
+  (2 3),
+  (2 1),
+  (1 2),
+  (4 3),
+  (3 4),
+  (16 9),
+  (9 16),
+  (10 3),
+  (3 10),
+  (17 10),
+  (10 17),
+  (14 9),
+  (9 14),
+  (21 9),
+  (9 21),
+);
