--- a/src/ts/components/instagram/instagram.component.html
+++ b/src/ts/components/instagram/instagram.component.html
@@ -1,18 +1,18 @@
 <div class="row">
-  <div class="col-4 px-0 content-box ratio-1-1" rv-each-image="media.data" rv-add-class="image.media_type">
+  <div class="col-4 px-0 embed-responsive embed-responsive-1by1" rv-each-image="media.data" rv-add-class="image.media_type">
     {% comment %} IMAGE {% endcomment %}
-    <img loading="lazy" class="content lazy" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-alt="image.caption">
+    <img loading="lazy" class="embed-responsive-item lazy" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-alt="image.caption">
 
     {% comment %} CAROUSEL_ALBUM {% endcomment %}
-    <img loading="lazy" class="content lazy" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
+    <img loading="lazy" class="embed-responsive-item lazy" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
     
     {% comment %} VIDEO {% endcomment %}
-    <video class="content lazy" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload playsinline webkit-playsinline>
+    <video class="embed-responsive-item lazy" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload playsinline webkit-playsinline>
       <source rv-src="image.media_url" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 
     {% comment %} hover info {% endcomment %}
-    <div class="content caption d-none d-md-flex align-items-center" rv-text="image.caption"></div>
+    <div class="embed-responsive-item caption d-none d-md-flex align-items-center" rv-text="image.caption"></div>
   </div>
 </div>
