--- a/theme/sections/lookbook-04.liquid
+++ b/theme/sections/lookbook-04.liquid
@@ -1,8 +1,8 @@
 <div class="container-fluid" id="page-lookbook">
   <div class="row">
     {% for block in section.blocks %}
-      {% assign ratioClass = "ratio-" | append: block.settings.aspect_ratio %}
-      {% assign ratioClassMD = "ratio-md-" | append: block.settings.aspect_ratio_md %}
+      {% assign ratioClass = "embed-responsive-" | append: block.settings.aspect_ratio %}
+      {% assign ratioClassMD = "embed-responsive-md-" | append: block.settings.aspect_ratio_md %}
 
       {% if block.settings.url contains "/blogs/" %}
         {% assign handle = block.settings.url | remove_first: "/blogs/" %}
@@ -49,7 +49,7 @@
       {% endif %}
         <img
           loading="lazy"
-          class="content lazy"
+          class="embed-responsive-item lazy"
           src="{{ image | img_url: '1200x1600', crop: 'center', format: 'pjpg' }}"
           srcset="
             {{ image | img_url: '1200x1600', crop: 'center', format: 'pjpg' }} 1200w,
@@ -115,67 +115,67 @@
             "label": "Aspect ratio (Smartphone)",
             "options": [
               {
-                "value": "1-1",
+                "value": "1by1",
                 "label": "1:1"
               },
               {
-                "value": "3-2",
+                "value": "3by2",
                 "label": "3:2"
               },
               {
-                "value": "2-3",
+                "value": "2by3",
                 "label": "2:3"
               },
               {
-                "value": "2-1",
+                "value": "2by1",
                 "label": "2:1"
               },
               {
-                "value": "1-2",
+                "value": "1by2",
                 "label": "1:2"
               },
               {
-                "value": "4-3",
+                "value": "4by3",
                 "label": "4:3"
               },
               {
-                "value": "3-4",
+                "value": "3by4",
                 "label": "3:4 (default)"
               },
               {
-                "value": "16-9",
+                "value": "16by9",
                 "label": "16:9 (Videos)"
               },
               {
-                "value": "9-16",
+                "value": "9by16",
                 "label": "9:16"
               },
               {
-                "value": "10-3",
+                "value": "10by3",
                 "label": "10:3"
               },
               {
-                "value": "3-10",
+                "value": "3by10",
                 "label": "3:10"
               },
               {
-                "value": "17-10",
+                "value": "17by10",
                 "label": "17:10"
               },
               {
-                "value": "10-17",
+                "value": "10by17",
                 "label": "10:17"
               },
               {
-                "value": "14-9",
+                "value": "14by9",
                 "label": "14:9"
               },
               {
-                "value": "9-14",
+                "value": "9by14",
                 "label": "9:14"
               }
             ],
-            "default": "3-4"
+            "default": "3by4"
           },
           {
             "type": "select",
@@ -188,63 +188,63 @@
                 "label": "None (use the smartphone ratio) (default)"
               },
               {
-                "value": "1-1",
+                "value": "1by1",
                 "label": "1:1"
               },
               {
-                "value": "3-2",
+                "value": "3by2",
                 "label": "3:2"
               },
               {
-                "value": "2-3",
+                "value": "2by3",
                 "label": "2:3"
               },
               {
-                "value": "2-1",
+                "value": "2by1",
                 "label": "2:1"
               },
               {
-                "value": "1-2",
+                "value": "1by2",
                 "label": "1:2"
               },
               {
-                "value": "4-3",
+                "value": "4by3",
                 "label": "4:3"
               },
               {
-                "value": "3-4",
+                "value": "3by4",
                 "label": "3:4 (use this for 2 images side by side)"
               },
               {
-                "value": "16-9",
+                "value": "16by9",
                 "label": "16:9 (Videos)"
               },
               {
-                "value": "9-16",
+                "value": "9by16",
                 "label": "9:16"
               },
               {
-                "value": "10-3",
+                "value": "10by3",
                 "label": "10:3"
               },
               {
-                "value": "3-10",
+                "value": "3by10",
                 "label": "3:10"
               },
               {
-                "value": "17-10",
+                "value": "17by10",
                 "label": "17:10"
               },
               {
-                "value": "10-17",
+                "value": "10by17",
                 "label": "10:17"
               },
               {
-                "value": "14-9",
+                "value": "14by9",
                 "label": "14:9"
               },
               {
-                "value": "9-14",
+                "value": "9by14",
                 "label": "9:14"
               }
             ],
