--- a/theme/sections/product-scrollbar.liquid
+++ b/theme/sections/product-scrollbar.liquid
@@ -4,10 +4,10 @@
     <div class="col-3"></div>
     {% for product in collection.products %}
       {% comment %} 900x1600 = 9x16 * 100 {% endcomment %}
-      <div rv-on-tap="onProductTap" rv-on-mouseenter="onProductMouseenter" data-url="{{product.url}}" data-title="{{product.title}}" class="col-6 px-0 content-box ratio-3-4 cursor-pointer">
+      <div rv-on-tap="onProductTap" rv-on-mouseenter="onProductMouseenter" data-url="{{product.url}}" data-title="{{product.title}}" class="col-6 px-0 embed-responsive embed-responsive-3by4 cursor-pointer">
         <img
           loading="lazy"
-          class="content lazy"
+          class="embed-responsive-item lazy"
           src="{{ product.featured_image | img_url: '1024x1365', crop: 'center', format: 'pjpg' }} 1024w"
           {% comment %}
             highest quality first for safari, see https://stackoverflow.com/q/45487105
