--- a/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
@@ -1,4 +1,4 @@
-<!-- jumplink-article-item-col-ratio-3-4.liquid -->
+<!-- jumplink-article-item-col-embed-responsive-3by4.liquid -->
 {% if colClass == blank %}
   {% assign colClass = 'col' %}
 {% endif %}
@@ -36,12 +36,12 @@
   {% endunless %}
 {% endif %}
 
-<rv-shopify-article-item class="{{ colClass }} px-0 content-box ratio-3-4" rv-route="'{{ article.url }}'" href="{{ article.url }}" style="background-color: {{ color }};">
+<rv-shopify-article-item class="{{ colClass }} px-0 embed-responsive embed-responsive-3by4" rv-route="'{{ article.url }}'" href="{{ article.url }}" style="background-color: {{ color }};">
   {% if showVideo %}
     {% if videoPoster %}
       <img
         loading="lazy"
-        class="content lazy"
+        class="embed-responsive-item lazy"
         src="{{ videoPoster }}"
         alt="{{article.title}}"
         style="padding: {{imageSpacing}}px"
@@ -64,7 +64,7 @@
     {% if videoType == 'vimeo' %}
       <iframe
         loading="lazy"
-        class="content lazy"
+        class="embed-responsive-item lazy"
         type="text/html"
         src="https://player.vimeo.com/video/{{ video }}?color=D9998F&title=0&byline=0&portrait=0&autoplay=0&loop=0&autopause=1&background=0&muted=0"
         frameborder="0"
@@ -81,7 +81,7 @@
     {% if videoType == 'youtube' %}
       <iframe
         loading="lazy"
-        class="content lazy"
+        class="embed-responsive-item lazy"
         type="text/html"
         src="https://www.youtube.com/embed/{{ video }}?autoplay=0&mute=0&color=white&controls=2&disablekb=0&enablejsapi=0&fs=1&iv_load_policy=3&loop=0&modestbranding=1&origin={{shop.url}}&playsinline=0&rel=0&showinfo=0"
         frameborder="0"
