--- a/theme/snippets/jumplink-shopping-cart-list-items.liquid
+++ b/theme/snippets/jumplink-shopping-cart-list-items.liquid
@@ -1,8 +1,8 @@
 <ul class="list-unstyled">
   <li class="media mb-3" rv-each-item="cart.items">
 
-    <div class="img-wrapper img-fluid mr-3 content-box ratio-3-4">
-      <img loading="lazy" class="content lazy" rv-shopify-img="item.image" rv-alt="item.title">
+    <div class="img-wrapper img-fluid mr-3 embed-responsive embed-responsive-3by4">
+      <img loading="lazy" class="embed-responsive-item lazy" rv-shopify-img="item.image" rv-alt="item.title">
       <rv-icon class="m-2 cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="16" rv-on-click="remove | args item %item%"></rv-icon>
     </div>
     
