Removed JQuery from binders, make use of the new component attribute binder

--- a/src/ts/components/debug-bar/debug-bar.component.html
+++ b/src/ts/components/debug-bar/debug-bar.component.html
@@ -1,4 +1,4 @@
-<small rv-hide="hidden" class="text-right" rv-on-singletap="toggleBar" rv-on-doubletap="hide">
+<small rv-hide="hidden" class="text-right" rv-touch-events rv-on-singletap="toggleBar" rv-on-doubletap="hide">
   { themeName }<br />
   <div>
     Device width:
