--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -1,4 +1,4 @@
-<rv-shopify-product rv-handle="'{{product.handle}}'" extras='{% include "jumplink-utils-json-product-extras" %}'>
+<rv-shopify-product handle="{{product.handle}}">
   <div class="container-fluid">
 
     {% comment %} selected variant featured_image image {% endcomment %}
