Removed jQuery from tabs component

--- a/theme/sections/outdated-browser.liquid
+++ b/theme/sections/outdated-browser.liquid
@@ -177,7 +177,7 @@
 
     <div id="outdated">
         <div class="outdated-modal">
-            <div class="d-none d-en-block">
+            <div class="d-none d-lang-en-block">
                 <h6 class="pb-3">Your browser is out of date!</h6>
                 <p class="d-browser-ie-none">Update your browser to view this webapp correctly.</p>
                 <p class="d-none d-browser-ie-block">
@@ -188,7 +188,7 @@
                     <a class="btnUpdateBrowser btn btn-animated-underline-dark font-weight-bold" href="https://outdatedbrowser.com/en">Update my browser now </a>
                 </p>
             </div>
-            <div class="d-none d-de-block">
+            <div class="d-none d-lang-de-block">
                 <h6 class="pb-3">Ihr Browser ist veraltet!</h6>
                 <p class="d-browser-ie-none">
                     Bitte aktualisieren Sie Ihren Browser, um diese Webanwendung korrekt darzustellen.
