--- a/theme/sections/product-scrollbar.liquid
+++ b/theme/sections/product-scrollbar.liquid
@@ -4,7 +4,7 @@
     <div class="col-3"></div>
     {% for product in collection.products %}
       {% comment %} 900x1600 = 9x16 * 100 {% endcomment %}
-      <div rv-on-tap="onProductTap" rv-on-mouseenter="onProductMouseenter" data-url="{{product.url}}" data-title="{{product.title}}" class="col-6 px-0 embed-responsive embed-responsive-3by4 cursor-pointer">
+      <div rv-touch-events rv-on-tap="onProductTap" rv-on-mouseenter="onProductMouseenter" data-url="{{product.url}}" data-title="{{product.title}}" class="col-6 px-0 embed-responsive embed-responsive-3by4 cursor-pointer">
         <img
           loading="lazy"
           class="embed-responsive-item lazy"
