--- a/theme/templates/collection.liquid
+++ b/theme/templates/collection.liquid
@@ -1,11 +1,9 @@
 <div class="container-fluid" rv-view='{"listenAllLinks": false, "containerSelector": "#products-pagination", "scrollToTop": false, "action": "append", "datasetToModel": false}' id="products-pagination">
   {% paginate collection.products by 40 %}
     <div class="row">
-      {% for product in collection.products %}
-        {% include 'product-collection-grid-item-col-embed-responsive-3by4' with product, collection, colClass: 'col-6 col-lg-4 col-xl-3' %}
-      {% endfor %}
-      <div class="col-12">
-        {% include 'jumplink-pagination' with viewId: 'products-pagination' %}
+      {% render 'product-collection-grid-item-col-embed-responsive-3by4' for collection.products as product, collection: collection, colClass: 'col-6 col-lg-4 col-xl-3' %}
+      <div class="col-12 mt-5">
+        {% render 'jumplink-pagination', paginate: paginate, paginate_hash: paginate_hash, viewId: 'products-pagination' %}
       </div>
     </div>
   {% endpaginate %}
